# convert-m4b-to-mp3

./: .gitignore  LICENSE  README.md  m4b_to_mp3.py
python/: README.md  m4b_to_mp3.py
r/: README.md  app.R
rust/: Cargo.toml  README.md
rust/src/: main.rs
swift/: AppIcon.icns  Info.plist  Package.swift  README.md  build.sh  icon_generator.swift
swift/.build/: build.db  plugin-tools.yaml
swift/.build/arm64-apple-macosx/debug/: M4BtoMP3  plugin-tools-description.json
swift/.build/arm64-apple-macosx/debug/M4BtoMP3.build/: ContentView.d  ContentView.swiftdeps  Converter.d  Converter.swiftdeps  M4BtoMP3.emit-module.d  M4BtoMP3App.d  M4BtoMP3App.swiftdeps  master.priors  output-file-map.json  sources
swift/.build/arm64-apple-macosx/debug/M4BtoMP3.dSYM/Contents/: Info.plist
swift/.build/arm64-apple-macosx/debug/M4BtoMP3.product/: Objects.LinkFileList
swift/.build/arm64-apple-macosx/debug/ModuleCache/2RVEJA34MR2LZ/: Accessibility-14JBEP228SSWD.pcm  ApplicationServices-1CRCAN744IO4N.pcm  CFNetwork-31P8GDC5EWL41.pcm  CUPS-2KH16NWVLNVO0.pcm  ColorSync-1KWH2T10UXMVF.pcm  CoreData-3U3WCU0AV8KFN.pcm  CoreFoundation-1YUXQIQY0O2PG.pcm  CoreGraphics-3BVRDEA9TPJO6.pcm  CoreImage-2GOW3UHHPA7JV.pcm  CoreText-2TWBA4D5T9PK8.pcm  CoreTransferable-2R8U0VHQ829LU.pcm  CoreVideo-2TUG535GNYVWG.pcm  MachO-1E48RKM8MIOQ3.pcm  (+44 more)
swift/.build/arm64-apple-macosx/debug/Modules/: M4BtoMP3.swiftdoc  M4BtoMP3.swiftmodule  M4BtoMP3.swiftsourceinfo
swift/.swiftpm/xcode/xcshareddata/xcschemes/: M4BtoMP3.xcscheme
swift/Sources/M4BtoMP3/: ContentView.swift  Converter.swift  M4BtoMP3App.swift
(+198 files in other folders)
