[package]
name = "m4b2mp3"
version = "0.1.0"
edition = "2021"
description = "M4B to MP3 chapter splitter with GUI"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"               # native file dialogs

[profile.release]
opt-level = 2
strip = true
